Update swagger.json
