# swagger.json
@@ -164,6 +164,136 @@
       }
     },
 
+    "/api/user/current": {
+      "get": {
+        "tags": ["User"],
+        "summary": "Get current user info",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {
+          "required": false,
+          "content": {}
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetCurrentUserResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/api/user/update":{
+      "put": {
+        "tags": ["User"],
+        "summary": "Update user info or contacts",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateUser"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "User updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UpdateUserResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          }
+        }
+      }
+    },
+
+    "/api/user/goal": {
+      "put": {
+        "tags": ["User"],
+        "summary": "Update user's goal",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateUserGoal"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Goal updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UpdateUserGoalResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          }
+        }
+      }
+    },
+
+    "/api/user/weight": {
+      "post": {
+        "tags": ["User"],
+        "summary": "Update user's weight",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateUserWeight"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Weight updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UpdateUserWeightResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          }
+        }
+      }
+    },
+
     "/api/user/water-intake": {
       "post": {
         "tags": ["Stats", "Water-intake"],
@@ -513,6 +643,204 @@
           }
         }
       },
+
+      "GetCurrentUserResponse": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "User's name",
+            "example": "John Johnson"
+          },
+          "email": {
+            "type": "string",
+            "description": "User's email",
+            "format": "email"
+          },
+          "password": {
+            "type": "string",
+            "description": "Hashed password"
+          },
+          "goal": {
+            "type": "string",
+            "enum": ["Lose fat", "Maintain", "Gain muscle"]
+          },
+          "gender": {
+            "type": "string",
+            "enum": ["Male", "Female"]
+          },
+
+          "age": {
+            "type": "number",
+            "example": 35
+          },
+
+          "height": {
+            "type": "number",
+            "example": 170
+          },
+
+          "weight": {
+            "type": "number",
+            "example": 80
+          },
+
+          "activity": {
+            "type": "number",
+            "enum": [1.2, 1.375, 1.55, 1.725, 1.9]
+          },
+          "bmr": {
+            "type": "number",
+            "description": "Basal metabolic rate"
+          },
+          "water": {
+            "type": "number",
+            "description": "Water intaked per day"
+          },
+          "nutrients": {
+            "properties": {
+              "carbohidrates": {
+                "type": "number",
+                "example": 140
+              },
+              "protein": {
+                "type": "number",
+                "example": 30
+              },
+              "fat": {
+                "type": "number",
+                "example": 50
+              }
+            }
+          },
+          "token": {
+            "type": "string"
+          },
+          "avatarUrl": {
+            "type": "string",
+            "description": "User's avatar link"
+          }
+        }
+      },
+
+      
+      "UpdateUser": {
+        "type": "object",
+        "required": ["name", "email", "gender", "age", "height", "weight", "activity"],
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "User's name",
+            "example": "John Johnson",
+            "required": true
+          },
+          "email": {
+            "type": "string",
+            "description": "User's email",
+            "format": "email"
+          },
+          "gender": {
+            "type": "string",
+            "enum": ["Male", "Female"]
+          },
+
+          "age": {
+            "type": "number",
+            "example": 35
+          },
+
+          "height": {
+            "type": "number",
+            "example": 170
+          },
+
+          "weight": {
+            "type": "number",
+            "example": 80
+          },
+
+          "activity": {
+            "type": "number",
+            "enum": [1.2, 1.375, 1.55, 1.725, 1.9]
+          }
+        }
+      },
+
+      "UpdateUserResponse": {
+        "type": "object",
+        "properties": {
+          "user": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string",
+                "description": "updated user's name",
+                "example": "Jake Sully"
+              },
+              "email": {
+                "type": "string",
+                "description": "updated user's email",
+                "example": "jake@mail.com"
+              }
+            }
+          }
+        }
+      },
+
+      "UpdateUserGoal": {
+        "type": "object",
+        "required": ["goal"],
+        "properties": {
+          "goal": {
+            "type": "string",
+            "enum": ["Lose fat", "Maintain", "Gain muscle"]
+          } 
+        }
+      },
+
+      "UpdateUserGoalResponse": {
+        "type": "object",
+        "properties": {
+          "user": {
+            "type": "object",
+            "properties": {
+              "goal": {
+                "type": "string",
+                "description": "user's goal updated",
+                "example": "Lose fat"
+              }
+            }
+          }
+        }
+      },
+
+      "UpdateUserWeight": {
+        "type": "object",
+        "required": ["weight"],
+        "properties": {
+          "weight": {
+            "type": "number",
+            "example": 100
+          } 
+        }
+      },
+
+      "UpdateUserWeightResponse": {
+        "type": "object",
+        "properties": {
+          "user": {
+            "type": "object",
+            "properties": {
+              "weight": {
+                "type": "number",
+                "description": "user's weight updated",
+                "example": 100
+              }
+            }
+          }
+        }
+      },
+
       "AddWaterIntakeRequest": {
         "type": "object",
         "required": ["waterIntake"],
